a lot of changes has been made, Changed a lot of sprites, added new ones. And I also added code for the player and block object, though, they aren't used 'in the game' as of now. Added states to settings, achievements and leaderboards. they will be accessed from the menu state. Moved the native files and the project java library pointer to the .lib/natives folder, because of this, I can work on the game on both my macbook and my pc.

--- a/data/settings.ini
+++ b/data/settings.ini
@@ -3,7 +3,7 @@
 # Video Settings:
 bFullScreen = true
 bVSync = true
-bDisplayFps = false
+bDisplayFps = true
 iWidth = 1280
 iHeight = 800
 iTargetFramerate = 60
@@ -16,6 +16,6 @@ iDifficulty = 1
 
 # Sound Settings:
 bSMute = false
-iSMaster = 100
+iSMaster = 10
 iSEffects = 100
 iSMusic = 100
