I have worked hard today to add the collision that is needed for this game to function. Changed some names, renamed the tileblocks folder to just blocks, also renamed the PlayerAnimations class to just Animations.

--- a/data/settings.ini
+++ b/data/settings.ini
@@ -1,12 +1,12 @@
 
 
 # Video Settings:
-bFullScreen = true
+bFullScreen = false
 bVSync = true
 bDisplayFps = true
-iWidth = 1280
-iHeight = 800
-iTargetFramerate = 60
+iWidth = 1920
+iHeight = 1080
+iTargetFramerate = 140
 iMinimumLogicUpdateInterval = 10
 
 
