--- a/data/settings.ini
+++ b/data/settings.ini
@@ -1,12 +1,12 @@
 
 
 # Video Settings:
-bFullScreen = false
+bFullScreen = true
 bVSync = true
 bDisplayFps = true
-iWidth = 1920
-iHeight = 1080
-iTargetFramerate = 140
+iWidth = 1280
+iHeight = 800
+iTargetFramerate = 60
 iMinimumLogicUpdateInterval = 10
 
 
