Added score bar in the window, now you can slide under objects by holding the s-key

--- a/data/settings.ini
+++ b/data/settings.ini
@@ -2,12 +2,12 @@
 
 # Video Settings:
 bFullScreen = true
-bVSync = false
+bVSync = true
 bDisplayFps = true
 iWidth = 1280
 iHeight = 800
 iTargetFramerate = 60
-iMinimumLogicUpdateInterval = 10
+iMinimumLogicUpdateInterval = 50
 
 
 # Game Settings:
