Wrote a great deal of java doc comments to explain what the different functions in the game does.

--- a/data/settings.ini
+++ b/data/settings.ini
@@ -3,16 +3,18 @@
 # Video Settings:
 bFullScreen = true
 bVSync = true
-bDisplayFps = true
+bDisplayFps = false
+#1280 or 1920
 iWidth = 1280
+#800 or 1080
 iHeight = 800
 iTargetFramerate = 60
-iMinimumLogicUpdateInterval = 5
+iMinimumLogicUpdateInterval = 10
 
 
 # Game Settings:
 # 1 = easy, 2 = medium, 3 = hard
-iDifficulty = 1
+iDifficulty = 3
 
 # Sound Settings:
 bSMute = false
