--- a/data/settings.ini
+++ b/data/settings.ini
@@ -6,18 +6,18 @@ bVSync = true
 bDisplayFps = false
 #iWidth = 1280
 #iHeight = 800
-iWidth = 1920
-iHeight = 1080
+iWidth = 1280
+iHeight = 800
 iTargetFramerate = 60
 iMinimumLogicUpdateInterval = 10
 
 
 # Game Settings:
-# 1 = easy, 2 = medium, 3 = hard
+# 1 = easy, 2 = medium, 3 = hard, 4 = Very Hard
 iDifficulty = 3
 
 # Sound Settings:
 bSMute = false
-iSMaster = 100
+iSMaster = 50
 iSEffects = 100
 iSMusic = 100
